crates/math-core/tests/snapshots/conversion_test__prescript_postscript_2.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\prescript{2}{}{\\frac{a}{b}}^3_2"
---
<math>
    <mmultiscripts>
        <mfrac>
            <mi>a</mi>
            <mi>b</mi>
        </mfrac>
        <mn>2</mn>
        <mn>3</mn>
        <mprescripts/>
        <mrow></mrow>
        <mn>2</mn>
    </mmultiscripts>
</math>
