crates/math-core/tests/snapshots/conversion_test__prime.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "f'"
---
<math>
    <msup>
        <mi>f</mi>
        <mo>′</mo>
    </msup>
</math>
