crates/math-core/tests/snapshots/conversion_test__prime_alone.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "'"
---
<math>
    <msup>
        <mrow></mrow>
        <mo>′</mo>
    </msup>
</math>
