crates/math-core/tests/snapshots/conversion_test__prime_and_super.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "f'^2"
---
<math>
    <msup>
        <mi>f</mi>
        <mrow>
            <mo>′</mo>
            <mn>2</mn>
        </mrow>
    </msup>
</math>
